Refatorando listagem compostas